<resources>
    <string name="app_name">Commerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nom_string">nom</string>
    <string name="prenom_string">prenom</string>
    <string name="login_string">LogIn</string>
    <string name="exit_string">Exit</string>
    <string name="cin_string">cin</string>
    <string name="ville_string">ville</string>
    <string name="adresse_string">adresse</string>
    <string name="tel_string">tel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ////////// //////////////-->
    <string name="loginstatus">Log in to your account</string>


</resources>
