<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#696969"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        />

        <EditText
            android:textSize="20sp"
            android:id="@+id/nomCText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_string"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:background="@drawable/back"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:textSize="20sp"
            android:id="@+id/prenomCText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom_string"
            android:padding="15dp"
            android:background="@drawable/back"
            android:layout_marginBottom="10dp"
            />

        <EditText android:textSize="20sp"
            android:id="@+id/cinCText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cin_string"
            android:visibility="gone"
            android:padding="15dp"
            android:background="@drawable/back"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />
        <EditText android:textSize="20sp"
            android:id="@+id/villeCText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ville_string"
            android:visibility="gone"
            android:padding="15dp"
            android:background="@drawable/back"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />
    <EditText android:textSize="20sp"
        android:id="@+id/addrCText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adresse_string"
        android:visibility="gone"
        android:padding="15dp"
        android:background="@drawable/back"
        android:layout_marginBottom="10dp"
        />
    <EditText android:textSize="20sp"
        android:id="@+id/mailCText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="e-mail"
        android:visibility="gone"
        android:padding="15dp"
        android:background="@drawable/back"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:textSize="20sp"
        android:id="@+id/telCText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel_string"
        android:visibility="gone"
        android:padding="15dp"
        android:background="@drawable/back"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:textSize="20sp"
        android:id="@+id/usernameCText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="username"
        android:visibility="gone"
        android:padding="15dp"
        android:background="@drawable/back"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:textSize="20sp"
        android:id="@+id/passCText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:visibility="gone"
        android:padding="15dp"
        android:background="@drawable/back"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            />
        <Button
            android:id="@+id/btnchooseprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose pic"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconmoins"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorAccent"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/user_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconplus"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorPrimary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/valide_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="Valide"
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
</LinearLayout>
